# scgpt-neurodegen-probe

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  QUESTIONS.md  README.md  STATUS.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
data/: README.md
docs/: api.md  architecture.md  biology.md  index.md
docs/decisions/: 0001.md  0002.md  0003.md  0004.md  0005.md  index.md
docs/templates/: adr.md
notebooks/: 00_setup.ipynb  01_demo.ipynb
results/: README.md
scripts/: download_data.sh  reproduce_results.sh
src/scgpt_neurodegen_probe/: __init__.py  _version.py  cli.py  config.py  pd_genes.py
src/scgpt_neurodegen_probe/benchmarks/: task_a_pd_ranking.py  task_b_disease_separation.py  task_c_celltype.py
src/scgpt_neurodegen_probe/models/: embeddings.py  load_geneformer.py  load_scgpt.py
src/scgpt_neurodegen_probe/stats/: permutation.py  reporting.py
tests/: conftest.py
tests/unit/: test_pd_genes.py  test_permutation.py  test_smoke.py  test_task_a.py
