[project]
name = "scgpt-neurodegen-probe"
version = "0.1.0"
description = "A zero-shot probe of single-cell foundation models on neurodegeneration benchmarks with biologically defensible ground truth."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Armin Bayati", email = "a.bayati.brain@gmail.com" }]
keywords = ["bioinformatics", "computational-biology", "neurodegeneration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "requests>=2.32",
    "tenacity>=8.5",
    "loguru>=0.7",
    "torch>=2.3",
    "transformers>=4.43",
    "anndata>=0.10",
    "scanpy>=1.10",
    "scikit-learn>=1.5",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.8", "seaborn>=0.13", "plotly>=5.22"]

[project.scripts]
scgpt-neurodegen-probe = "scgpt_neurodegen_probe.cli:app"

[project.urls]
Homepage = "https://github.com/arminbayati/scgpt-neurodegen-probe"
Documentation = "https://arminbayati.github.io/scgpt-neurodegen-probe/"
Issues = "https://github.com/arminbayati/scgpt-neurodegen-probe/issues"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "responses>=0.25",
    "respx>=0.21",
    "ruff>=0.6.9",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "ipykernel>=6.29",
    "jupyter>=1.0",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "pymdown-extensions>=10.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scgpt_neurodegen_probe"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]  # handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = false
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: marks tests as integration (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
